<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dm_16"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/lightBlue"
                android:textSize="25dp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/popular"
            android:fontFamily="@font/sourcesanspro_light"
            android:textSize="@dimen/tv_24"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_top" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_popular"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular" />

        <TextView
            android:id="@+id/tv_most_viewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/lightBlue"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:text="@string/most_viewed"
            android:textSize="@dimen/tv_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/iv_right_viewed"
            android:layout_width="@dimen/dm_30"
            android:layout_height="@dimen/dm_30"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_most_viewed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_most_viewed"
            app:srcCompat="@drawable/ic_right_arrow" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_most_viewed" />

        <TextView
            android:id="@+id/tv_most_shared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/lightBlue"

            android:fontFamily="@font/sourcesanspro_semibold"
            android:text="@string/most_shared"
            android:textSize="@dimen/tv_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <ImageView
            android:id="@+id/iv_right_shared"
            android:layout_width="@dimen/dm_30"
            android:layout_height="@dimen/dm_30"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_most_shared"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_most_shared"
            app:srcCompat="@drawable/ic_right_arrow" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_most_shared" />

        <TextView
            android:id="@+id/tv_most_emailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:textColor="@color/lightBlue"
            android:text="@string/most_emailed"
            android:textSize="@dimen/tv_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />
        <ImageView
            android:id="@+id/iv_right_emailed"
            android:layout_width="@dimen/dm_30"
            android:layout_height="@dimen/dm_30"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_most_emailed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_most_emailed"
            app:srcCompat="@drawable/ic_right_arrow" />
        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_most_emailed" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>