<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/lightBlue"
                android:textSize="@dimen/dm_20"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="185dp"
                tools:layout_editor_absoluteY="14dp"
                tools:text="@string/windowTitle" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toStartOf="@+id/tv_toolbar_title"
                app:layout_constraintStart_toStartOf="@+id/toolbar_top"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_blue" />

        </android.support.v7.widget.Toolbar>

        <SearchView
            android:id="@+id/sv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:iconifiedByDefault="false"
            android:focusedByDefault="false"
            android:background="@drawable/bg_rounded_search_view"
            android:queryHint="@string/search_query_hint"
            app:layout_constraintBottom_toTopOf="@+id/linera_layout_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_top" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/hidden_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_search">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_hidden_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:nestedScrollingEnabled="true"
                android:paddingBottom="120dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hidden_constraint_layout" />

            <ImageView
                android:id="@+id/iv_no_search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_empty"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hidden_constraint_layout"></ImageView>

            <TextView
                android:id="@+id/tv_no_search_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_search_results"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_no_search_results" />

            <TextView
                android:id="@+id/tv_no_search_results_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_search_results_explain"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_no_search_results" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linera_layout_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_search">

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="@color/darkBlue"
                app:tabSelectedTextColor="@color/darkBlue"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                app:tabTextColor="@color/darkSky">

            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>