<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_details_banner"
                android:layout_width="83dp"
                android:layout_height="88dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:text="tv_detail_name"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/iv_love_details"
                app:layout_constraintStart_toEndOf="@+id/iv_details_banner"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_love_details"
                android:layout_width="35dp"
                android:layout_height="43dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_like_filled" />

            <TextView
                android:id="@+id/tv_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:text="title"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/iv_love_details"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_details_banner"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_title" />

            <TextView
                android:id="@+id/tv_published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:text="posted date"
                android:textColor="@color/darkBlue"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/iv_love_details"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_details_banner"
                app:layout_constraintTop_toBottomOf="@+id/tv_sub_text"
                 />

            <TextView
                android:id="@+id/tv_share_this"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/share_this"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_published_date" />

            <ImageView
                android:id="@+id/iv_fb_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/share_background_circle"
                android:padding="12dp"
                app:layout_constraintEnd_toStartOf="@+id/tv_share_this"
                app:layout_constraintHorizontal_bias="0.61"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_share_this"
                app:srcCompat="@drawable/ic_fb" />

            <ImageView
                android:id="@+id/iv_twitter_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/share_background_circle"
                android:padding="12dp"
                app:layout_constraintStart_toEndOf="@+id/iv_fb_share"
                app:layout_constraintTop_toBottomOf="@+id/tv_share_this"
                app:srcCompat="@drawable/ic_twitter_share" />

            <ImageView
                android:id="@+id/iv_wa_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/share_background_circle"
                android:padding="12dp"
                app:layout_constraintStart_toEndOf="@+id/iv_twitter_share"
                app:layout_constraintTop_toBottomOf="@+id/tv_share_this"
                app:srcCompat="@drawable/ic_wa_share" />

            <ImageView
                android:id="@+id/iv_link_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/share_background_circle"
                android:padding="12dp"
                app:layout_constraintStart_toEndOf="@+id/iv_wa_share"
                app:layout_constraintTop_toBottomOf="@+id/tv_share_this"
                app:srcCompat="@drawable/ic_link_share" />

            <ImageView
                android:id="@+id/iv_other_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/share_background_circle"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_link_share"
                app:layout_constraintTop_toBottomOf="@+id/tv_share_this"
                app:srcCompat="@drawable/ic_other_share" />

            <View
                android:id="@+id/SplitLine_hor1"
                android:layout_width="60dp"
                android:layout_height="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/darkBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_wa_share" />

            <TextView
                android:id="@+id/tv_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="64dp"
                android:text="@string/byLine"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor1" />

            <TextView
                android:id="@+id/tv_source_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingLeft="8dp"
                tools:text="source"
                android:paddingRight="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_source"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_source"
                app:layout_constraintTop_toTopOf="@+id/tv_source" />

            <TextView
                android:id="@+id/tv_abstract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/jsonAbstarct"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_source" />

            <TextView
                android:id="@+id/tv_abstract_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingLeft="8dp"
                tools:text="description"
                android:paddingRight="8dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_abstract"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_abstract"
                app:layout_constraintTop_toTopOf="@+id/tv_abstract"
                app:layout_constraintVertical_bias="0.0" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/white_circle_for_close"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_close" />
</android.support.constraint.ConstraintLayout>